--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Monoton|Open+Sans+Condensed:300|Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Notable|Roboto+Condensed:300i&display=swap');
 .container {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -7,7 +8,7 @@
 }
 
 .navbar {
-    font-family: open+sans+condensed, sans-serif;
+    font-family: Roboto+Condensed, sans-serif;
 }
 
 .jumbotron {
@@ -22,13 +23,13 @@
 
 .first_h2,
 .first_h1 {
-    font-family: monoton, sans-serif;
+    font-family: Notable, sans-serif;
     padding-bottom: 10px;
     color: white;
 }
 
 .rest_h2 {
-    font-family: monoton, sans-serif;
+    font-family: Notable, sans-serif;
     padding-bottom: 10px;
 }
 
@@ -56,4 +57,53 @@
 .first_h1:hover {
     color: red;
     font-size: 60px;
+}
+
+.text_after_graph {
+    margin-top: 50px;
+    padding-bottom: 50px;
+    font-family: Roboto+Condensed, sans-serif;
+}
+
+
+/* back to the top button */
+
+#button {
+    display: inline-block;
+    background-color: #FF9800;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border-radius: 4px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    transition: background-color .3s, opacity .5s, visibility .5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+}
+
+#button::after {
+    content: "\f077";
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 2em;
+    line-height: 50px;
+    color: #fff;
+}
+
+#button:hover {
+    cursor: pointer;
+    background-color: #333;
+}
+
+#button:active {
+    background-color: #555;
+}
+
+#button.show {
+    opacity: 1;
+    visibility: visible;
 }
