--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Monoton|Open+Sans+Condensed:300|Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Notable|Roboto+Condensed:300i&display=swap');
+html {
+    scroll-behavior: smooth;
+}
+
 .container {
     padding-top: 30px;
     padding-bottom: 30px;
