--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
     right: 0;
     left: 0;
     z-index: 1030;
+    font-family: Oswald, sans-serif;
 }
 
 a {
@@ -35,10 +36,6 @@ p {
     padding-right: 15px;
 }
 
-.navbar {
-    font-family: Oswald, sans-serif;
-}
-
 .jumbotron {
     text-align: center;
     background-color: rgba(63, 63, 58, 0);
@@ -59,7 +56,11 @@ p {
 .rest_h2 {
     font-family: Oswald, sans-serif;
     padding-top: 30px;
-    padding-bottom: 10px;
+    margin-bottom: 80px;
+}
+
+h3 {
+    padding-top: 30px;
 }
 
 .text-first-page {
@@ -105,4 +106,11 @@ p {
     color: white;
     text-align: center;
     font-family: Roboto, sans-serif;
+}
+
+
+/* Form section */
+
+.form_text {
+    font-family: roboto, sans-serif;
 }
