--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 a {
-    color: #fff;
+    color: black;
     font-family: Roboto, sans-serif;
 }
 
@@ -86,6 +86,10 @@ h3 {
 .text_after_graph {
     margin-top: 50px;
     padding-bottom: 50px;
+}
+
+.text_pics {
+    padding-top: 30px;
 }
 
 
